@@ -985,6 +985,14 @@ sub phase_unpack {
 		return;
 	}
 
+	my ($gcc);
+	my %gcchash = ('2.95.2' => '2', '2.95' => '2', '3.1' => '3');
+
+	if ($self->has_param("GCC")) {
+	    $gcc = $self->param("GCC");
+	    die "\n\nYou have the wrong version of gcc selected; run the command\n\n     sudo gcc_select " . $gcchash{$gcc} . "\n\n(and/or install a more recent version of the Developer Tools)\nto correct this problem.\n" unless (`gcc_select` =~ /version\ $gcc/);
+	}
+
 	$bdir = $self->get_fullname();
 
 	$verbosity = "";
@@ -1236,7 +1244,7 @@ sub phase_patch {
 
 sub phase_compile {
 	my $self = shift;
-	my ($dir, $compile_script, $cmd);
+	my ($dir, $compile_script, $cmd, $gcc);
 
 	if ($self->{_type} eq "bundle") {
 		return;
@@ -1249,6 +1257,7 @@ sub phase_compile {
 		($self->{parent})->phase_compile();
 		return;
 	}
+
 
 	$dir = $self->get_build_directory();
 	if (not -d "$buildpath/$dir") {
